plugins {
    id 'java'
}

group 'co.selim'
version '1.0.0'

sourceCompatibility = JavaVersion.VERSION_1_9

repositories {
    mavenCentral()
}

dependencies {
}
